# bachelorproject

./: .gitignore  README.md
backend/: Dockerfile  docs_backend.md  fly.toml  pyproject.toml  pytest.ini
backend/app/: __main__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py
backend/app/api/v1/endpoints/hybrid/: __init__.py  pairs.py  pipeline.py  scoring.py  strategies.py  workflow.py
backend/app/config/: __init__.py  settings.py
backend/app/infrastructure/: __init__.py  paths.py  presets.py
backend/app/infrastructure/persistence/: __init__.py  json_store.py
backend/app/modules/: __init__.py
backend/app/modules/hybrid/: __init__.py
backend/app/modules/hybrid/schemas/: __init__.py  pairs.py  pipeline.py  scoring.py  strategies.py  workflow.py
backend/app/modules/hybrid/services/: __init__.py  pairs.py  pipeline.py  scoring.py  strategy_input.py  workflow_state.py
backend/app/pipelines/: __init__.py
backend/app/pipelines/nli/: __init__.py
backend/app/pipelines/nli/pipeline/: Makefile  pair_schema.py  paths.py  regions.py  report_pipeline.py
backend/app/pipelines/nli/pipeline/1-UserInput/: input_strategy.py
backend/app/pipelines/nli/pipeline/2-Hypothesen/: strategy_hypotheses.py
backend/app/pipelines/nli/pipeline/5-Reports/: merge_pairs.py
backend/app/pipelines/nli/pipeline/7-Scoring/: intervall.py  (+1 more)
backend/app/pipelines/nli/preprocessing/: merge_premises.py
backend/app/scripts/: __init__.py
backend/app/scripts/forecast_reports/: __init__.py  cli.py
(+104 files in other folders)
